save device info
